--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <nav>
+    <nav class="container nav">
       <div class="logo">
         <h3>Crypto<span class="sub__logo">rian</span></h3>
       </div>
@@ -18,7 +18,7 @@
       </ul>
     </nav>
 
-    <section class="hero__section">
+    <section class="container hero__section">
       <div class="hero__text">
         <h2>Connecting the world to crypto</h2>
         <p>
@@ -28,34 +28,40 @@
         <button class="wallet">Get free wallet</button>
       </div>
       <div class="hero__img">
-        <img src="./images/female.jpg" alt="" />
+        <img src="./images/female.png" alt="" />
       </div>
     </section>
 
-    <section class="services__section">
+    <section class="container services__section">
       <h1>Our Services</h1>
       <div class="services">
         <div class="service">
-          <img src="./images/s1.jpg" alt="" />
+          <div class="img__cover">
+          <img src="./images/s1.png" alt="" />
+          </div>
           <p>Exchange Your Currency</p>
         </div>
 
         <div class="service">
-          <img src="./images/s2.jpg" alt="" />
+          <div class="img__cover">
+            <img src="./images/s2.png" alt="" />
+          </div>
           <p>Boost Your Wallet</p>
         </div>
 
         <div class="service">
-          <img src="./images/s3.jpg" alt="" />
+          <div class="img__cover">
+          <img src="./images/s3.png" alt="" />
+          </div>
           <p>Sell Your Bitcoin</p>
         </div>
       </div>
     </section>
 
-    <section class="promo__section">
+    <section class="container promo__section">
       <div class="promo">
         <div class="promo__img">
-          <img src="./images/female1.jpg" alt="" />
+          <img src="./images/female1.png" alt="" />
         </div>
         <div class="promo__text">
           <h1>Get 20% Off</h1>
@@ -63,7 +69,7 @@
       </div>
     </section>
 
-    <section class="reviews__section">
+    <section class="container reviews__section">
       <div class="reviews">
         <div class="review">
           <img src="./images/review1.jpg" alt="" />
@@ -85,7 +91,7 @@
       </div>
     </section>
 
-    <footer>
+    <footer class="container">
       <div class="footer__section">
         <div class="logo">
           <h3>Crypto<span class="logo__sub">rian</span></h3>
